--- a/docker/etc/apache2/sites-available/000-default.conf
+++ b/docker/etc/apache2/sites-available/000-default.conf
@@ -1,14 +1,13 @@
 <VirtualHost *:80>
 
-    DocumentRoot /var/www/html/htdocs
+    DocumentRoot /var/www/html/htdocs/public
 
     DirectoryIndex /index.php
 
-    <Directory /var/www/html/htdocs>
-        AllowOverride None
+    <Directory /var/www/html/htdocs/public>
+        AllowOverride All
         Order Allow,Deny
         Allow from All
-        FallbackResource /index.php
     </Directory>
 
 
